Fixed random unintended scrolling to top in the left nav of Files.app.
Because of some crazy WebKit issue around the flex-box model, each layout recalculation caused scrolling to top. This patch solves this issue by applying a position: absolute workaround to fill the parent div.

TEST=In Files.app, open a volume/directory with lots of directories, so a scrollbar appears in the left nav. Scroll down in the left nav, and select a directory. It *should not* scroll to top.
BUG=212268


Review URL: https://chromiumcodereview.appspot.com/13485010

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@192275 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 4a1792eac809b30b5aad30d391b1ed7c4dde89c3

--- a/chrome/browser/resources/file_manager/css/file_manager.css
+++ b/chrome/browser/resources/file_manager/css/file_manager.css
@@ -163,6 +163,7 @@ body.loaded {
 .dialog-sidebar {
   -webkit-box-flex: 0;
   background-color: #e6e6e6;
+  border-right: 1px solid rgb(170, 170, 170);
   display: -webkit-box;
   max-width: 50%;
   min-width: 45px;
@@ -176,20 +177,21 @@ body.loaded {
 div.sidebar-splitter {
   -webkit-box-flex: 0;
   cursor: col-resize;
-  margin-left: -4px;  /* +1px to accomodate the roots list border */
+  margin-left: -3px;
   margin-right: -3px;
   position: relative;
-  width: 7px;
+  width: 6px;
   z-index: 2;
 }
 
 #directory-tree {
-  -webkit-box-orient: vertical;
-  border-right: 1px solid rgb(170, 170, 170);
-  display: -webkit-box;
+  bottom: 0;
+  left: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  width: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 #directory-tree .tree-row {
